# syslog-forward

./: .gitignore  Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  libtool
lib/: Makefile  Makefile.am  Makefile.in
lib/libconfig/: Makefile  Makefile.am  Makefile.in  ac_config.h  libconfig++.pc  libconfig.pc  stamp-h2
lib/libconfig/.libs/: libconfig++.lai  libconfig.lai
lib/libconfig/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
lib/libconfig/doc/: Makefile.in
lib/libconfig/samples/: Makefile.in
lib/libconfig/samples/c/: Makefile.in
lib/libconfig/samples/c++/: Makefile.in
src/: Makefile  Makefile.am  Makefile.in  client.c  configuration.c  server  server.c  syslog-forward
src/.libs/: syslog-forward
src/common/: configuration.h  default.h
src/etc/: syslog-forward.cfg
